Fix horizontal whitespace
Patch from @msporleder on github.

--- a/css/99s.css
+++ b/css/99s.css
@@ -551,7 +551,7 @@ footer .credits p {
 }
 
 #docs-nav+ul, #articles-nav, .sidecol h3{
-	width: 100%;
+	width: 500px;
 }
 
 #contents .container .maincol.span9 {
